# Perturbarium

./: .gitignore  NAVIGATION.md  README.md  RULEBOOK.md  where-am-i.md
architecture/: Reverse-Publickey-Identity-Verification[RPIV].md  gdiff.md
axia/: Axia-Axiom.md  Axia-Axiom.simple.md  Evolution-Axiom.simple.md  Exponential-Learning-Axiom.md  Exponential-Learning-Axiom.simple.md  Implementation-Axiom.md  Implementation-Axiom.simple.md  README.md
engineering/: Instamaster.md  SineScramble.md  SineShift.md
engineering/instamaster/: run.sh
engineering/licensee/: crypto.py  encoding.py  license_manager.py
engineering/sinescramble/: README.md  demo.py  utils.py
engineering/sineshift/: README.md  __init__.py  fft_analyzer.py  plot_data.py  run.sh  sine_generator.py  test_sineshift_fullspectrum.py
guides/: Coders-Guide-to-'Good'.md  Evolution-Axia.md  README.md
implementations/: README.md
implementations/claude-agents/: README.md
implementations/claude-agents/create/: README.md  content.md  design.md  prototype.md
implementations/claude-agents/manage/: README.md  operations.md  project.md  quality.md
implementations/claude-agents/optimize/: README.md  growth.md  performance.md  workflow.md
implementations/instamaster/: Readme.md  instamaster.py  requirements.txt
implementations/licensee/: README.md  keygen_ui.py  license_data.py  permutation.py
implementations/sinescramble/: README.md  TAMARIN_ANALYSIS.md  __init__.py  cipher.py  cipher_optimized.py  cipher_turbo.py  requirements.txt  run.sh  run_tamarin_analysis.sh  tamarin_debug_confidentiality.txt  tamarin_debug_correctness.txt  tamarin_debug_integrity.txt  tamarin_lemmas_sinescramble_attacks.spthy.txt  tamarin_maude_test.txt  test_simple_output.txt  test_sinescramble.py
implementations/sinescramble/tamarin-solution/: README.md  sinescramble_attacks.spthy  sinescramble_tamarin.spthy  tamarin_analysis_report.txt  tamarin_debug_confidentiality.txt  tamarin_debug_confidentiality_multi_round.txt  tamarin_debug_confidentiality_segmented.txt  tamarin_debug_correctness.txt  tamarin_debug_correctness_multi_round.txt  tamarin_debug_integrity.txt  tamarin_debug_integrity_multi_round.txt
implementations/sineshift/: README.md  __init__.py  mutator.py  test_sineshift.py
implementations/xof-genetics/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
implementations/xof-genetics/tests/: README.md  __init__.py  test_evolution.py  test_integration.py  test_limits.py  test_organism.py  test_specification_compliance.py  test_threading_and_auto_population.py
implementations/xof-genetics/xof_genetics/: README.md  __init__.py  demo.py  evolution.py  organism.py
inkspill/: README.md  assembly-tracer.spec.md  react-mono.md  slots.html
inkspill/notes/: README.md
specifications/: Licensee.md  README.md  gdiff.md
theory/: README.md  Reverse-Publickey-Identity-Verification[RPIV].md  ai-web-death.md  assembly-tracer.md  fft_compression_concept.md  quantum-stroboscopic-electron-stabilization.md  xof-genetics.md
